kubernetes/platform/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations: # <-- תוספת 1: אומרים לראוטר מי מנפיק את התעודות
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.3.211.120.10.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: platform-monitoring-grafana
            port:
              number: 80
  tls: # <-- תוספת 2: מגדירים את הדומיין לאבטחה ואיפה לשמור את התעודה
  - hosts:
    - grafana.3.211.120.10.nip.io
    secretName: grafana-tls-secret
